import grpc
from concurrent import futures
import time
import event_management_pb2
import event_management_pb2_grpc

class EventManagementServicer(event_management_pb2_grpc.EventManagementServicer):
    def CreateEvent(self, request, context):
        # Implement logic for creating an event
        return event_management_pb2.EventResponse(success=True, message="Event created", event=request)
    
    def UpdateEvent(self, request, context):
        # Implement logic for updating an event
        return event_management_pb2.EventResponse(success=True, message="Event updated", event=request)
    
    def GetEvent(self, request, context):
        # Implement logic for retrieving an event
        return event_management_pb2.Event(id=request.id, name="Sample Event", description="This is a sample event", location="Sample Location", datetime="2024-06-20T12:00:00")
    
    def SearchEvents(self, request, context):
        # Implement logic for searching events
        events = [
            event_management_pb2.Event(id=1, name="Event 1", description="Description 1", location="Location 1", datetime="2024-06-20T12:00:00"),
            event_management_pb2.Event(id=2, name="Event 2", description="Description 2", location="Location 2", datetime="2024-06-21T14:00:00")
        ]
        return event_management_pb2.EventList(events=events)
    
    def PurchaseTicket(self, request, context):
        # Implement logic for purchasing a ticket
        return event_management_pb2.TicketResponse(success=True, message="Ticket purchased")
    
    def GetUserEvents(self, request, context):
        # Implement logic for retrieving user's events
        events = [
            event_management_pb2.Event(id=1, name="Event 1", description="Description 1", location="Location 1", datetime="2024-06-20T12:00:00")
        ]
        return event_management_pb2.EventList(events=events)

def serve():
    server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
    event_management_pb2_grpc.add_EventManagementServicer_to_server(EventManagementServicer(), server)
    server.add_insecure_port('[::]:50051')
    server.start()
    print("gRPC server is running on port 50051...")
    try:
        while True:
            time.sleep(86400)  # Sleep for one day
    except KeyboardInterrupt:
        server.stop(0)

if __name__ == '__main__':
    serve()
